# trakt-plex-sync

./: Bumpfile  Dockerfile  LICENSE  README.md  __main__.py  cache.py  lru_cache.py  plex_cache.py  plex_library.py  plex_watchlist.py  pyproject.toml  requirements.txt  trakt_played.py  trakt_plex_sync.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: docker.yml  lint.yml  merge.yml  sync.yml  trakt.yml
trakt_plex_sync/: __init__.py  plex_library.py  trakt_played.py
