[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "trakt-plex-sync"
version = "0.2.0"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Joshua Peek" } ]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "lru-cache @ https://github.com/josh/lru-cache-python/releases/download/v1.0.2/lru_cache-1.0.2-py3-none-any.whl",
    "plexapi>=4,<5",
]

scripts.trakt-plex-sync = "trakt_plex_sync:main"

[dependency-groups]
dev = [
    "mypy>=1,<2",
    "ruff>=0.5,<2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
lint.extend-select = [ "I", "UP" ]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true
